--- a/MyLectureApplication/Views/Account/Register.cshtml
+++ b/MyLectureApplication/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MvcApplication2.Models.RegisterModel
+﻿@model MyLectureApplication.Models.RegisterModel
 @{
     ViewBag.Title = "Register";
 }
