--- a/MyLectureApplication/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/MyLectureApplication/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model ICollection<MvcApplication2.Models.ExternalLogin>
+﻿@model ICollection<MyLectureApplication.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
