--- a/MyLectureApplication/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/MyLectureApplication/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model MvcApplication2.Models.RegisterExternalLoginModel
+﻿@model MyLectureApplication.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
