--- a/MyLectureApplication/Views/Account/_SetPasswordPartial.cshtml
+++ b/MyLectureApplication/Views/Account/_SetPasswordPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model MvcApplication2.Models.LocalPasswordModel
+﻿@model MyLectureApplication.Models.LocalPasswordModel
 
 <p>
     You do not have a local password for this site. Add a local
