--- a/MyLectureApplication/Views/Account/Login.cshtml
+++ b/MyLectureApplication/Views/Account/Login.cshtml
@@ -1,50 +1,41 @@
 ﻿@model MyLectureApplication.Models.LoginModel
 
 @{
-    ViewBag.Title = "Log in";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-</hgroup>
 
-<section id="loginForm">
-<h2>Use a local account to log in.</h2>
+<div class="row">
+  <div class="span4 offset4 well" >
+   
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
-
+    <style>
+        .checkbox {
+            float:left;
+        }
+        input {
+            width: 95%;
+        }
+        .validation-summary-errors {
+padding:8px 35px 8px 14px;margin-bottom:20px;text-shadow:0 1px 0 rgba(255, 255, 255, 0.5);background-color:#fcf8e3;border:1px solid #fbeed5;-webkit-border-radius:4px;-moz-border-radius:4px;border-radius:4px;
+background-color:#f2dede;border-color:#eed3d7;color:#b94a48;
+}
+    </style>
     <fieldset>
         <legend>Log in Form</legend>
-        <ol>
-            <li>
                 @Html.LabelFor(m => m.UserName)
                 @Html.TextBoxFor(m => m.UserName)
                 @Html.ValidationMessageFor(m => m.UserName)
-            </li>
-            <li>
                 @Html.LabelFor(m => m.Password)
                 @Html.PasswordFor(m => m.Password)
                 @Html.ValidationMessageFor(m => m.Password)
-            </li>
-            <li>
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
-            </li>
-        </ol>
-        <input type="submit" value="Log in" />
+        <input type="submit" value="Log in" class="btn btn-large btn-block btn-primary" />
     </fieldset>
     <p>
         @Html.ActionLink("Register", "Register") if you don't have an account.
     </p>
 }
-</section>
-
-<section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
-</section>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+  </div>
+</div>
