--- a/MyLectureApplication/Views/Account/Manage.cshtml
+++ b/MyLectureApplication/Views/Account/Manage.cshtml
@@ -1,7 +1,9 @@
 ﻿@model MyLectureApplication.Models.LocalPasswordModel
+
 @{
-    ViewBag.Title = "Manage Account";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 
 <hgroup class="title">
     <h1>@ViewBag.Title.</h1>
@@ -20,7 +22,3 @@ else
     @Html.Partial("_SetPasswordPartial")
 }
 
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
