--- a/MyLectureApplication/Views/Shared/_Layout.cshtml
+++ b/MyLectureApplication/Views/Shared/_Layout.cshtml
@@ -1,16 +1,16 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>@ViewBag.Title</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <title>Programming assignment 5</title>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="/Content/css/style.css" rel="stylesheet">
 </head>
 <body>
+<div class="container">
     @RenderBody()
-
-    @Scripts.Render("~/bundles/jquery")
-    @RenderSection("scripts", required: false)
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.5/angular.min.js"></script>
+<script src="/Content/js/prog5.js"></script>
 </body>
 </html>
