--- a/MyLectureApplication/Views/Home/Index.cshtml
+++ b/MyLectureApplication/Views/Home/Index.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿@{
+    Layout = "";
+}
+<!DOCTYPE html>
 <html ng-app="Prog5">
 <head>
     <title>Programming assignment 5</title>
