--- a/MyLectureApplication/Content/views/lectures.html
+++ b/MyLectureApplication/Content/views/lectures.html
@@ -2,9 +2,9 @@
   Welcome {{username}}
 </h2>
 <form class="form-inline">
-  <input type="text" ng-model="newRoom.name" class="input-small" placeholder="Lecture name" required/>
-  <input type="text" ng-model="newRoom.description" class="input-small" placeholder="URL" required/>
-  <button ng-click="addRoom()" class="btn">
+  <input type="text" ng-model="newLecture.Name" class="input-small" placeholder="Lecture name" required/>
+  <input type="text" ng-model="newLecture.LectureURL" class="input-small" placeholder="URL" required/>
+  <button ng-click="addLecture()" class="btn">
     Create lecture
   </button>
 </form>
