--- a/MyLectureApplication/Views/Account/Login.cshtml
+++ b/MyLectureApplication/Views/Account/Login.cshtml
@@ -6,7 +6,7 @@
 
 
 <div class="row">
-  <div class="span4 offset4 well" >
+  <div class="well" >
    
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
