--- a/MyLectureApplication/Content/css/style.css
+++ b/MyLectureApplication/Content/css/style.css
@@ -3,6 +3,8 @@
     background-color:white;
     padding: 50px;
     border-radius:5px;
+    width:900px;
+    margin-bottom:30px;
 }
 .hide_element {
     display:none;
@@ -58,9 +60,11 @@ select.noncreator {
     height:400px !important;
 }
 .youtube-player {
+    width:100%;
     display: block;
     margin-left:auto;
     margin-right:auto;
+    margin-bottom:10px;
 }
 h2 {
     text-align:center;
@@ -77,9 +81,10 @@ h2 {
 }
 .sendmsg {
     height:70px;
+    
 }
 .commentform {
-    
+    width:650px;
     margin-top:10px;
     text-align:center;
      display: block !important; 
@@ -90,7 +95,7 @@ h2 {
 width:550px !important;
 }
 .comment span{
-    background-color:black;
+    background-color:#333333;
     color:white;
     width:100%;
     height:100%;
@@ -102,17 +107,26 @@ width:550px !important;
     padding-right:40px;
 }
 .comment {
-    width:600px;
+    border-radius:5px;
+    width:100%;
      display: block !important; 
     margin-left:auto !important;
     margin-right:auto !important;
-    background-color:#cccccc;
+    background-color:#EEEEEE;
    text-align:left;
    overflow:hidden;
+   margin-bottom:5px;
 
 }
 
 .comment p{
     padding-left:10px;
 
+}
+.well {
+    
+     display: block !important; 
+    margin-left:auto !important;
+    margin-right:auto !important;
+    width: 400px;
 }
