--- a/MyLectureApplication/Views/Account/Register.cshtml
+++ b/MyLectureApplication/Views/Account/Register.cshtml
@@ -10,6 +10,7 @@
 <button class="btn btn-primary" type="submit">
   &lt; Back
 </button>
+    </form>
 <div class="row">
   <div class="well" ng-controller="LoginController">
    
