--- a/MyLectureApplication/Content/css/style.css
+++ b/MyLectureApplication/Content/css/style.css
@@ -1,10 +1,11 @@
 .container {
-    margin-top: 30px;
+    margin-top: 2%;
     background-color:white;
-    padding: 50px;
+    padding: 1%;
     border-radius:5px;
-    width:900px;
-    margin-bottom:30px;
+    max-width:800px;
+    width:100%;
+    margin-bottom:2%;
 }
 .hide_element {
     display:none;
@@ -44,7 +45,7 @@ body {
     width:90% !important;
 }
 #sendbtn {
-    width:100px;
+    width:10%;
 }
 .timecol{
     width:5%;
@@ -71,20 +72,21 @@ h2 {
 }
 
 .form-inline {
-    width:600px;
+    width:60%;
      display: block !important; 
     margin-left:auto !important;
     margin-right:auto !important
 }
 .input-small {
-  width:200px;
+  width:20%;
 }
 .sendmsg {
     height:70px;
     
 }
 .commentform {
-    width:650px;
+    width:80%;
+    max-width:650px;
     margin-top:10px;
     text-align:center;
      display: block !important; 
@@ -92,7 +94,7 @@ h2 {
     margin-right:auto !important
 }
 .span5 {
-width:550px !important;
+width:50% !important;
 }
 .comment span{
     background-color:#333333;
@@ -117,16 +119,15 @@ width:550px !important;
    overflow:hidden;
    margin-bottom:5px;
 
-}
+}   
 
 .comment p{
     padding-left:10px;
 
 }
 .well {
-    
-     display: block !important; 
+    width: 100%;
     margin-left:auto !important;
     margin-right:auto !important;
-    width: 400px;
+    max-width:350px;
 }
